openshift/route-trace-server-cname.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
  labels:
    paas.redhat.com/appcode: JTNR-001
  name: trace-server-cname
spec:
  host: ymir.redhat.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: otel-collector
    weight: 100
  wildcardPolicy: None
